--- a/solariOSApp/Base.lproj/Main.storyboard
+++ b/solariOSApp/Base.lproj/Main.storyboard
@@ -70,7 +70,8 @@
                                 <rect key="frame" x="274" y="617" width="81" height="30"/>
                                 <state key="normal" title="View Profile"/>
                                 <connections>
-                                    <action selector="viewProfilePressed:" destination="xuE-OU-Nef" eventType="touchUpInside" id="R12-Ad-VbT"/>
+                                    <action selector="viewProfilePressed:" destination="xuE-OU-Nef" eventType="touchUpInside" id="SNR-pv-K9Q"/>
+                                    <segue destination="oyb-3K-6Tu" kind="show" identifier="profileSegue" id="9Sh-xC-S2F"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -154,6 +155,7 @@
                                             <color key="titleColor" red="0.29411764709999999" green="0.46274509800000002" blue="0.68627450980000004" alpha="1" colorSpace="calibratedRGB"/>
                                         </state>
                                         <connections>
+                                            <action selector="logoutPressed:" destination="oyb-3K-6Tu" eventType="touchUpInside" id="4fs-As-gZl"/>
                                             <segue destination="gdL-co-eEv" kind="show" id="4kk-al-1Rb"/>
                                         </connections>
                                     </button>
@@ -466,6 +468,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
+        <segue reference="9Sh-xC-S2F"/>
         <segue reference="4kk-al-1Rb"/>
         <segue reference="LAr-mM-ejy"/>
     </inferredMetricsTieBreakers>
